syntax = "proto3";

package auth;

option go_package = "mikra.sso.v1;ssov1";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponce);
    rpc Login (LoginRequest) returns (LoginResponce);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponce);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponce {
    int64 user_id = 1;
}


message LoginRequest {
    string email = 1;
    string password = 2;
    int64 app_id = 3;
}

message LoginResponce {
    string token = 1;
}

message IsAdminRequest {
    int user_id = 1;
}

message IsAdminResponce {
    int is_admin = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    bool success = 1;
}